--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,6 @@ pytest = "^7.4.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+start="fetch_sdet_challenge.entry_point:main"
